# thetadata-mcp

./: .env.example  .gitignore  .pre-commit-config.yaml  LICENSE  README.md  generate_endpoint_docs.py  openapiv3_updated.yaml  pyproject.toml  server.py  subscription.py
endpoints_by_subscription/: endpoints_free.md  endpoints_professional.md  endpoints_standard.md  endpoints_value.md
